# mcp

./: .gitignore  README.md
docs/: autogen.html  awesome.html  awesome.md  buenas_practicas.html  buenas_practicas.md  crewai.html  fast_mcp.adoc  fast_mcp.html  fast_mcp_slides.html  fast_mcp_slides.md  mcp.adoc  (+20 more)
samples/test_sample/: .gitignore  AGENTS.md  README.md  pyproject.toml  specs.md
samples/test_sample/.specify/: feature.json  init-options.json
samples/test_sample/.specify/extensions/: .registry
samples/test_sample/.specify/integrations/: opencode.manifest.json  speckit.manifest.json
samples/test_sample/.specify/memory/: constitution.md
samples/test_sample/.specify/workflows/: workflow-registry.json
samples/test_sample/specs/001-mcp-test-questions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
samples/test_sample/specs/001-mcp-test-questions/checklists/: requirements.md
samples/test_sample/specs/001-mcp-test-questions/contracts/: resources.md  tools.md
samples/test_sample/specs/002-mcp-gui-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
samples/test_sample/specs/002-mcp-gui-client/checklists/: requirements.md
samples/test_sample/specs/002-mcp-gui-client/contracts/: ui-components.md
samples/test_sample/src/mcp_gui_client/: __init__.py  config.py  main.py
samples/test_sample/src/mcp_gui_client/mcp_client/: __init__.py  connection.py  tools.py
samples/test_sample/src/mcp_gui_client/utils/: validators.py
samples/test_sample/src/mcp_gui_client/views/: __init__.py  main_window.py
samples/test_sample/src/mcp_gui_client/widgets/: __init__.py
samples/test_sample/src/mcp_test_questions/: __init__.py  server.py
samples/test_sample/src/mcp_test_questions/models/: __init__.py  question.py
samples/test_sample/src/mcp_test_questions/resources/: __init__.py  question_resource.py
samples/test_sample/src/mcp_test_questions/storage/: __init__.py  question_store.py
samples/test_sample/src/mcp_test_questions/tools/: __init__.py  create_question.py  delete_question.py  get_question.py  update_question.py
samples/test_sample/tests/: __init__.py  conftest.py
samples/test_sample/tests/contract/: __init__.py  test_mcp_contracts.py
samples/test_sample/tests/integration/: test_mcp_tools.py
samples/test_sample/tests/unit/: test_mcp_client.py  test_question_model.py  test_question_resource.py  test_question_store.py  test_validators.py
(+51 files in other folders)
